--- a/Webapp/Webapp/Views/Home/Login.cshtml
+++ b/Webapp/Webapp/Views/Home/Login.cshtml
@@ -1,9 +1,12 @@
 ﻿
 @{
     ViewData["Title"] = "Login";
+    Layout = null;
 }
 
 <h2>Login</h2>
 <h2>@ViewData["Message"]</h2>
+<h2>@ViewData["username"]</h2>
+<h2>@ViewData["password"]</h2>
 
 Goedzo
