--- a/Webapp/Webapp/Views/Shared/_Layout.cshtml
+++ b/Webapp/Webapp/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http;
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -7,7 +8,11 @@
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+        <link rel="stylesheet" href="~/css/custom.css" />
         <link rel="stylesheet" href="~/css/site.css" />
+        <link rel="stylesheet" href="//cdn.datatables.net/1.10.19/css/dataTables.bootstrap.min.css" />
+        <link rel="stylesheet" href="//cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css" />
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -17,41 +22,96 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Webapp</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+    <div class="container-fluid row">
+        <div class="nav-side-menu col-xs-3">
+            <div class="brand">Brand Logo</div>
+            <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
+
+            <div class="menu-list">
+
+                <ul id="menu-content" class="menu-content collapse out">
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-dashboard fa-lg"></i> Dashboard
+                        </a>
+                    </li>
+                    @if (Context.Session.GetString("loginType") == "admin")
+                    {
+                        <li data-toggle="collapse" data-target="#departments" class="collapsed">
+                            <a href="#"><i class="fa fa-hospital-o fa-lg"></i> Afdelingen <span class="arrow"></span></a>
+                        </li>
+                        <ul class="sub-menu collapse" id="departments">
+                            <li><i class="fa fa-area-chart fa-lg"></i> Overzicht</li>
+                            <li><i class="fa fa-users fa-lg"></i> Nieuwe toevoegen</li>
+                        </ul>
+                        <li data-toggle="collapse" data-target="#typeTreatment" class="collapsed">
+                            <a href="#"><i class="fa fa-heartbeat fa-lg"></i> Type behandelingen <span class="arrow"></span></a>
+                        </li>
+                        <ul class="sub-menu collapse" id="typeTreatment">
+                            <li><i class="fa fa-bar-chart fa-lg"></i> Overzicht</li>
+                            <li><i class="fa fa-medkit fa-lg"></i> Nieuwe toevoegen</li>
+                        </ul>
+                        <li data-toggle="collapse" data-target="#doctors" class="collapsed">
+                            <a href="#"><i class="fa fa-user-md fa-lg"></i> Artsen <span class="arrow"></span></a>
+                        </li>
+                        <ul class="sub-menu collapse" id="doctors">
+                            <li><i class="fa fa-area-chart fa-lg"></i> Overzicht</li>
+                            <li><i class="fa fa-user-plus fa-lg"></i> Nieuwe toevoegen</li>
+                        </ul>
+                    }
+                    else if (Context.Session.GetString("loginType") == "doctor")
+                    {
+                        <li data-toggle="collapse" data-target="#behandelingen" class="collapsed">
+                            <a href="#"><i class="fa fa-medkit fa-lg"></i> Behandelingen <span class="arrow"></span></a>
+                        </li>
+                        <ul class="sub-menu collapse" id="behandelingen">
+                            <li><i class="fa fa-area-chart fa-lg"></i> Overzicht</li>
+                            <li><i class="fa fa-medkit fa-lg"></i> Nieuwe toevoegen</li>
+                        </ul>
+
+                        <li>
+                            <a href="#"><i class="fa fa-bed fa-lg"></i> Patienten</a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-hospital-o fa-lg"></i> Afdeling</a>
+                        </li>
+                    }
+                    else if (Context.Session.GetString("loginType") == "patient")
+                    {
+                        <li>
+                            <a href="#"><i class="fa fa-medkit fa-lg"></i> Behandelingen</a>
+                        </li>
+                    }
+                    <hr style="margin:0;" />
+                    <li>
+                        <a href="#"><i class="fa fa-user fa-lg"></i> Profiel</a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-sign-out fa-lg"></i> Logout
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
-    </nav>
 
-    <partial name="_CookieConsentPartial" />
-
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; 2019 - Webapp</p>
-        </footer>
+        <div class="col-md-9 col-xs-12" style="float:right;">
+            @RenderBody()
+            <hr />
+            <footer>
+                <p>&copy; 2019 - Webapp</p>
+            </footer>
+        </div>
     </div>
 
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
+        <script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+        <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap.min.js"></script>
+        <script src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
+        <script src="https://cdn.datatables.net/responsive/2.2.3/js/responsive.bootstrap.min.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
