Start met login

--- a/Webapp/Webapp/Views/Home/About.cshtml
+++ b/Webapp/Webapp/Views/Home/About.cshtml
@@ -4,4 +4,7 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
+<p>Welcome @ViewData["uname"]</p>
+<p>U bent een @ViewData["loginType"]</p>
+
 <p>Use this area to provide additional information.</p>
