form gemaakt voor pati

--- a/Webapp/Webapp/Views/Shared/_Layout.cshtml
+++ b/Webapp/Webapp/Views/Shared/_Layout.cshtml
@@ -95,10 +95,10 @@
             </div>
         </div>
 
-        <div class="col-md-9 col-xs-12" style="float:right;">
+        <div class="col-md-8 col-xs-12 " style="float:right; overflow-x:hidden; max-width:100%;">
             @RenderBody()
             <hr />
-            <footer>
+            <footer style="padding-right:0;">
                 <p>&copy; 2019 - Webapp</p>
             </footer>
         </div>
