--- a/Webapp/Webapp/Views/Home/User.cshtml
+++ b/Webapp/Webapp/Views/Home/User.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <link rel="stylesheet" href="~/css/User.css" />
-<div class="container bootstrap snippet">
-    <div class="row" >
+<div class="container bootstrap snippet col-lg-offset-0" id="container">
+    <div class="row">
         <div class="col-sm-10"><h1>Patiënt</h1><hr /></div>
     </div>
     <div class="row">
