--- a/Webapp/Webapp/wwwroot/css/User.css
+++ b/Webapp/Webapp/wwwroot/css/User.css
@@ -2,6 +2,8 @@
     display: none;
 }
 
+
+
 .switch {
     display: inline-block;
     width: 30px;
@@ -23,7 +25,6 @@
     border: 4px solid transparent;
     overflow: hidden;
     transition: .4s;
-    !background:Grey;
 }
 
     .slider:before {
@@ -47,6 +48,8 @@ input:checked + .slider {
     box-shadow: 0 0 0 2px Green,0 0 2px Green;
 }
 
-body{
-    overflow-x:hidden;
+body {
+    overflow-x: hidden;
+    align-content: center;
+    position:relative;
 }
