--- a/Webapp/Webapp/Views/Shared/_Layout.cshtml
+++ b/Webapp/Webapp/Views/Shared/_Layout.cshtml
@@ -22,10 +22,10 @@
     </environment>
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container" style="width:100%">
         <div class="row">
-            <div class="col-xs-3 col-sm-12">
-                <div class="nav-side-menu">
+            <div class="col-sm-3 col-xs-12" style="padding:0;">
+                <div class="nav-side-menu" style="width:inherit;">
                     <div class="brand">Brand Logo</div>
                     <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
 
