--- a/Webapp/Webapp/Views/Shared/_Layout.cshtml
+++ b/Webapp/Webapp/Views/Shared/_Layout.cshtml
@@ -89,8 +89,9 @@
                                 <a href="#"><i class="fa fa-user fa-lg"></i> Profiel</a>
                             </li>
                             <li>
-                                <a href="#">
-                                    <i class="fa fa-sign-out fa-lg"></i> Logout
+                                <a asp-action="Logout" method="get">
+                                    <i class="fa fa-sign-out fa-lg">
+                                    </i>  Logout
                                 </a>
                             </li>
                         </ul>
