Updated patient profile

--- a/Webapp/Webapp/Views/Shared/_Layout.cshtml
+++ b/Webapp/Webapp/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
                             }
                             <hr style="margin:0;" />
                             <li>
-                                <a href="#"><i class="fa fa-user fa-lg"></i> Profiel</a>
+                                <a asp-action="profile" asp-controller="home"><i class="fa fa-user fa-lg"></i> Profiel</a>
                             </li>
                             <li>
                                 <a href="#">
