Add and Edit Treatment Added

--- a/Webapp/Webapp/Views/Treatment/EditTreatment.cshtml
+++ b/Webapp/Webapp/Views/Treatment/EditTreatment.cshtml
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="~/css/User.css" />
 <div class="container bootstrap snippet col-lg-offset-0" id="container">
     <div class="row">
-        <div class="col-sm-10"><h1>Maak een behandeling aan</h1></div>
+        <div class="col-sm-10"><h1>Pas de behandeling aan</h1></div>
     </div>
     <div class="row">
         <div class="col-sm-9">
