--- a/Webapp/Webapp/Views/Treatment/AddTreatment.cshtml
+++ b/Webapp/Webapp/Views/Treatment/AddTreatment.cshtml
@@ -6,7 +6,7 @@
 <h2>Doctor</h2>
 
 <link rel="stylesheet" href="~/css/User.css" />
-<div class="container bootstrap snippet col-lg-offset-0" id="container">
+<div class="container bootstrap snippet col-lg-offset-0" id="container"/>
     <div class="row">
         <div class="col-sm-10"><h1>Maak een behandeling aan</h1></div>
     </div>
@@ -32,9 +32,9 @@
                             <div class="col-xs-6">
                                 <label for="nameTreatment"><h4>Behandelingstype</h4></label>
                                 <select type="text" class="form-control" name="nameTreatment" id="nameTreatment" placeholder="Type van de behandeling" title="Type van de behandeling.">
-                                    naam
-                                    optie 2
-                                    optie 3
+                                    <option>Behandeling 1</option>
+                                    <option>Behandeling 2</option>
+                                    <option>Behandeling 3</option>
                                 </select>
                             </div>
                         </div>
@@ -70,6 +70,7 @@
                                 <br />
                             </div>
                         </div>
+                        <button type="submit" class="btn btn-primary" asp-action="Index" formmethod="post">Maak Aan</button>
                     </form>
                     <hr>
                 </div><!--/tab-pane-->
