--- a/Webapp/Webapp/Views/Treatment/Index.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Index.cshtml
@@ -8,7 +8,7 @@
 <h2>Treatment</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="AddTreatment">Create New</a>
 </p>
 <table class="table table-striped table-hover" id="treatmentTable" style="width:100%;">
     <thead>
@@ -26,7 +26,7 @@
                 <td>@item.BeginDate</td>
                 <td>@item.EndDate</td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                    @Html.ActionLink("Edit", "EditTreatment", new { id=item.Id }) |
                     @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
                     @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
                 </td>
