--- a/Webapp/Webapp/Views/Profile/Edit.cshtml
+++ b/Webapp/Webapp/Views/Profile/Edit.cshtml
@@ -200,7 +200,7 @@
                                 Telefoonnummer
                             </div>
                         </div>
-                        <div ifass="form-group">
+                        <div class="form-group">
 
                             <div class="col-xs-6">
                                 <label class="switch">
