--- a/Webapp/Webapp/Views/Shared/_Layout.cshtml
+++ b/Webapp/Webapp/Views/Shared/_Layout.cshtml
@@ -90,7 +90,7 @@
                                 <a asp-action="index" asp-controller="profile"><i class="fa fa-user fa-lg"></i> Profiel</a>
                             </li>
                             <li>
-                                <a asp-action="Logout" method="get">
+                                <a asp-action="Logout" asp-controller="Home" method="get">
                                     <i class="fa fa-sign-out fa-lg">
                                     </i>  Logout
                                 </a>
