treatment post data

--- a/Webapp/Webapp/Views/Treatment/AddTreatment.cshtml
+++ b/Webapp/Webapp/Views/Treatment/AddTreatment.cshtml
@@ -19,19 +19,19 @@
                         <div class="form-group">
                             <div class="col-xs-12">
                                 <label for="name"><h4>Patiënt</h4></label>
-                                <input type="text" class="form-control" name="name" id="name" placeholder="//Naam van de patiënt//" title="//Naam van de patiënt//">
+                                <input type="text" class="form-control" name="patientname" id="patientname" placeholder="Naam van de patiënt" title="//Naam van de patiënt//">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-xs-6">
                                 <label for="Age"><h4>Behandelingsnaam</h4></label>
-                                <input type="text" class="form-control" name="age" id="age" placeholder="Naam van de behandeling" title="Naam van de behandeling.">
+                                <input type="text" class="form-control" name="treatmentname" id="treatmentname" placeholder="Naam van de behandeling" title="Naam van de behandeling.">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-xs-6">
                                 <label for="nameTreatment"><h4>Behandelingstype</h4></label>
-                                <select type="text" class="form-control" name="nameTreatment" id="nameTreatment" placeholder="Type van de behandeling" title="Type van de behandeling.">
+                                <select type="text" class="form-control" name="treatmenttype" id="treatmenttype" placeholder="Type van de behandeling" title="Type van de behandeling.">
                                     <option>Behandeling 1</option>
                                     <option>Behandeling 2</option>
                                     <option>Behandeling 3</option>
@@ -47,7 +47,7 @@
                         <div class="form-group">
                             <div class="col-xs-2">
                                 <label for="BeginTime"><h4>Tijd</h4></label>
-                                <input type="time" class="form-control" name="beginTime" id="beginTime" title="Begintijd behandeling">
+                                <input type="time" class="form-control" name="begintime" id="begintime" title="Begintijd behandeling">
                             </div>
                         </div>
                         <div class="form-group">
@@ -59,13 +59,13 @@
                         <div class="form-group">
                             <div class="col-xs-2">
                                 <label for="EndTime"><h4>Tijd</h4></label>
-                                <input type="time" class="form-control" name="endTime" id="endTime" title="Eindtijd behandeling">
+                                <input type="time" class="form-control" name="endtime" id="endtime" title="Eindtijd behandeling">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-xs-12">
                                 <label for="Comments"><h4>Bericht</h4></label>
-                                <input type="text" class="form-control" name="comments" id="comments" placeholder="Bericht" title="Bericht.">
+                                <input type="text" class="form-control" name="comment" id="comment" placeholder="Bericht" title="Bericht.">
                                 <br />
                                 <br />
                             </div>
