--- a/Webapp/Webapp/Views/Treatment/EditTreatment.cshtml
+++ b/Webapp/Webapp/Views/Treatment/EditTreatment.cshtml
@@ -33,9 +33,9 @@
                             <div class="col-xs-6">
                                 <label for="nameTreatment"><h4>Behandelingstype</h4></label>
                                 <select type="text" class="form-control" name="treatmenttype" id="treatmenttype" value="Model.TreatmentType" title="Type van de behandeling.">
-                                    naam
-                                    optie 2
-                                    optie 3
+                                    <option>Behandeling 1</option>
+                                    <option>Behandeling 2</option>
+                                    <option>Behandeling 3</option>
                                 </select>
                             </div>
                         </div>
@@ -48,7 +48,7 @@
                         <div class="form-group">
                             <div class="col-xs-2">
                                 <label for="BeginTime"><h4>Tijd</h4></label>
-                                <input type="time" class="form-control" name="beginTime" id="beginTime" value="@Model.BeginDate.ToShortTimeString()" title="Begintijd behandeling">
+                                <input type="time" class="form-control" name="begintime" id="begintime" value="@Model.BeginDate.ToShortTimeString()" title="Begintijd behandeling">
                             </div>
                         </div>
                         <div class="form-group">
@@ -60,13 +60,13 @@
                         <div class="form-group">
                             <div class="col-xs-2">
                                 <label for="EndTime"><h4>Tijd</h4></label>
-                                <input type="time" class="form-control" name="endTime" id="endTime" value="@Model.EndDate.ToShortTimeString()" title="Eindtijd behandeling">
+                                <input type="time" class="form-control" name="endtime" id="endtime" value="@Model.EndDate.ToShortTimeString()" title="Eindtijd behandeling">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-xs-12">
                                 <label for="Comments"><h4>Bericht</h4></label>
-                                <input type="text" class="form-control" name="comments" id="comments" placeholder="Bericht" title="Bericht.">
+                                <input type="text" class="form-control" name="comment" id="comment" placeholder="Bericht" title="Bericht.">
                                 <br />
                                 <br />
                                 <button type="submit" class="btn btn-primary" asp-action="Index" formmethod="post">Pas Aan</button>
