--- a/Webapp/Webapp/Views/Patient/Detail.cshtml
+++ b/Webapp/Webapp/Views/Patient/Detail.cshtml
@@ -1,7 +1,9 @@
-﻿
+﻿@using Webapp.Models.Data;
+@Model Webapp.Models.TreatmentViewModel;
 @{
     ViewData["Title"] = "Doctor";
     Layout = "~/Views/Shared/_Layout.cshtml";
+
 }
 
 <h2>Doctor</h2>
@@ -20,7 +22,7 @@
                         <div class="form-group">
                             <div class="col-xs-6">
                                 <label for="name"><h4>Volledige naam</h4></label>
-                                <input type="text" class="form-control" name="name" id="name" placeholder="Voer je naam in" title="Voer je naam in.">
+                                <input type="text" class="form-control" name="name" id="name" placeholder="Voer je naam in" title="Voer je naam in." value="@Model.Patient.Name">
                             </div>
                         </div>
                         <div class="form-group">
