Treatment errors not fixed

--- a/Webapp/Webapp/Views/Treatment/Edit.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Edit.cshtml
@@ -20,7 +20,7 @@
                         <div class="form-group">
                             <div class="col-xs-12">
                                 <label for="name"><h4>Patiënt</h4></label>
-                                <input type="text" class="form-control" name="patientname" id="patientname" value="@Model.PatientName" title="//Naam van de patiënt//">
+                                <input type="text" class="form-control" name="patientname" id="patientname" value="@Model.PatientDetailViewModel.Name" title="//Naam van de patiënt//">
                             </div>
                         </div>
                         <div class="form-group">
