--- a/Webapp/Webapp/Views/Treatment/Index.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Index.cshtml
@@ -6,7 +6,7 @@
 <h2>Treatment</h2>
 
 <p>
-    <a asp-action="AddTreatment">Create New</a>
+    <a asp-action="Add">Create New</a>
 </p>
 <table class="table table-striped table-hover" id="treatmentTable" style="width:100%;">
     <thead>
@@ -24,9 +24,7 @@
                 <td>@item.BeginDate</td>
                 <td>@item.EndDate</td>
                 <td>
-                    @Html.ActionLink("Edit", "EditTreatment", new { id=item.Id }) |
-                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                 </td>
             </tr>
         }
