Add Treatment works

--- a/Webapp/Webapp/Views/Treatment/Add.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Add.cshtml
@@ -4,6 +4,7 @@
 }
 
 <h2>Doctor</h2>
+<h2>@ViewBag.Bericht</h2>
 
 <link rel="stylesheet" href="~/css/User.css" />
 <div class="container bootstrap snippet col-lg-offset-0" id="container"/>
@@ -70,7 +71,7 @@
                                 <br />
                             </div>
                         </div>
-                        <button type="submit" class="btn btn-primary" asp-action="Index" formmethod="post">Maak Aan</button>
+                        <button type="submit" class="btn btn-primary" formmethod="post">Maak Aan</button>
                     </form>
                     <hr>
                 </div><!--/tab-pane-->
