--- a/Webapp/Webapp/Views/Treatment/Detail.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Detail.cshtml
@@ -20,7 +20,7 @@
                         <div class="form-group">
                             <div class="col-xs-12">
                                 <label for="name"><h4>Patiënt</h4></label>
-                                <input type="text" class="form-control" asp-for="PatientDetailViewModel.Name" value="@Model.PatientDetailViewModel.Name" title="//Naam van de patiënt//">
+                                <type="text" class="form-control" asp-for="PatientDetailViewModel.Name" value="@Model.PatientDetailViewModel.Name" title="//Naam van de patiënt//">
                             </div>
                         </div>
                         <div class="form-group">
@@ -66,7 +66,7 @@
                         <div class="form-group">
                             <div class="col-xs-12">
                                 <label for="Comments"><h4>Bericht</h4></label>
-                                <input type="text" class="form-control" asp-for="Comment" value="@Model.Comment" title="Bericht.">
+                                <input type="text" class="form-control" name="comment" id="comment" placeholder="Bericht" title="Bericht.">
                                 <br />
                                 <br />
                                 <button type="submit" class="btn btn-primary" asp-action="Index" formmethod="post">Pas Aan</button>
