--- a/Webapp/Webapp/Views/Treatment/Add.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Add.cshtml
@@ -2,79 +2,80 @@
     ViewData["Title"] = "Behandeling";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@model Webapp.Models.TreatmentDetailViewModel
 
 <h2>Doctor</h2>
 <h2>@ViewBag.Bericht</h2>
 
 <link rel="stylesheet" href="~/css/User.css" />
-<div class="container bootstrap snippet col-lg-offset-0" id="container"/>
-    <div class="row">
-        <div class="col-sm-10"><h1>Maak een behandeling aan</h1></div>
-    </div>
-    <div class="row">
-        <div class="col-sm-9">
-            <div class="tab-content">
-                <div class="tab-pane active" id="home">
-                    <hr>
-                    <form class="form" action="##" method="post" id="registrationForm">
-                        <div class="form-group">
-                            <div class="col-xs-12">
-                                <label for="name"><h4>Patiënt</h4></label>
-                                <input type="text" class="form-control" name="patientname" id="patientname" placeholder="Naam van de patiënt" title="//Naam van de patiënt//">
-                            </div>
+<div class="container bootstrap snippet col-lg-offset-0" id="container" />
+<div class="row">
+    <div class="col-sm-10"><h1>Maak een behandeling aan</h1></div>
+</div>
+<div class="row">
+    <div class="col-sm-9">
+        <div class="tab-content">
+            <div class="tab-pane active" id="home">
+                <hr>
+                <form class="form" method="post">
+                    <div class="form-group">
+                        <div class="col-xs-12">
+                            <label for="name"><h4>Patiënt</h4></label>
+                            <input type="text" class="form-control" asp-for="PatientDetailViewModel.Name" placeholder="Naam van de patiënt" title="//Naam van de patiënt//">
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-6">
-                                <label for="Age"><h4>Behandelingsnaam</h4></label>
-                                <input type="text" class="form-control" name="treatmentname" id="treatmentname" placeholder="Naam van de behandeling" title="Naam van de behandeling.">
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="Age"><h4>Behandelingsnaam</h4></label>
+                            <input type="text" class="form-control" asp-for="Name" placeholder="Naam van de behandeling" title="Naam van de behandeling.">
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-6">
-                                <label for="nameTreatment"><h4>Behandelingstype</h4></label>
-                                <select type="text" class="form-control" name="treatmenttype" id="treatmenttype" placeholder="Type van de behandeling" title="Type van de behandeling.">
-                                    <option>Behandeling 1</option>
-                                    <option>Behandeling 2</option>
-                                    <option>Behandeling 3</option>
-                                </select>
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="nameTreatment"><h4>Behandelingstype</h4></label>
+                            <select type="text" class="form-control" asp-for="Type" placeholder="Type van de behandeling" title="Type van de behandeling.">
+                                <option>Behandeling 1</option>
+                                <option>Behandeling 2</option>
+                                <option>Behandeling 3</option>
+                            </select>
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-4">
-                                <label for="Begindate"><h4>Begindatum</h4></label>
-                                <input type="date" class="form-control" name="begindate" id="begindate" placeholder="Begindatum behandeling" title="Begindatum behandeling">
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-4">
+                            <label for="Begindate"><h4>Begindatum</h4></label>
+                            <input type="date" class="form-control" asp-for="BeginDate" placeholder="Begindatum behandeling" title="Begindatum behandeling">
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-2">
-                                <label for="BeginTime"><h4>Tijd</h4></label>
-                                <input type="time" class="form-control" name="begintime" id="begintime" title="Begintijd behandeling">
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-2">
+                            <label for="BeginTime"><h4>Tijd</h4></label>
+                            <input type="time" class="form-control" asp-for="BeginTime" title="Begintijd behandeling">
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-4">
-                                <label for="Enddate"><h4>Einddatum</h4></label>
-                                <input type="date" class="form-control" name="enddate" id="enddate" placeholder="Einddatum behandeling" title="Einddatum behandeling">
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-4">
+                            <label for="Enddate"><h4>Einddatum</h4></label>
+                            <input type="date" class="form-control" asp-for="EndDate" placeholder="Einddatum behandeling" title="Einddatum behandeling">
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-2">
-                                <label for="EndTime"><h4>Tijd</h4></label>
-                                <input type="time" class="form-control" name="endtime" id="endtime" title="Eindtijd behandeling">
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-2">
+                            <label for="EndTime"><h4>Tijd</h4></label>
+                            <input type="time" class="form-control" asp-for="EndTime" title="Eindtijd behandeling">
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-12">
-                                <label for="Comments"><h4>Bericht</h4></label>
-                                <input type="text" class="form-control" name="comment" id="comment" placeholder="Bericht" title="Bericht.">
-                                <br />
-                                <br />
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-12">
+                            <label for="Comments"><h4>Bericht</h4></label>
+                            <input type="text" class="form-control" asp-for="Comment" placeholder="Bericht" title="Bericht.">
+                            <br />
+                            <br />
                         </div>
-                        <button type="submit" class="btn btn-primary" formmethod="post">Maak Aan</button>
-                    </form>
-                    <hr>
-                </div><!--/tab-pane-->
-            </div><!--/tab-content-->
-        </div><!--/col-9-->
-    </div><!--/row-->
+                    </div>
+                    <button type="submit" asp-controller="Treatment" asp-action="Add" class="btn btn-primary">Maak Aan</button>
+                </form>
+                <hr>
+            </div><!--/tab-pane-->
+        </div><!--/tab-content-->
+    </div><!--/col-9-->
+</div><!--/row-->
