--- a/Webapp/Webapp/Views/Treatment/Add.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Add.cshtml
@@ -72,7 +72,7 @@
                             <br />
                         </div>
                     </div>
-                    <button type="submit" asp-controller="Treatment" asp-action="Add" class="btn btn-primary">Maak Aan</button>
+                    <button type="submit" asp-controller="Treatment" asp-action="Index" class="btn btn-primary">Maak Aan</button>
                 </form>
                 <hr>
             </div><!--/tab-pane-->
