--- a/Webapp/Webapp/Views/Treatment/Detail.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Detail.cshtml
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="~/css/User.css" />
 <div class="container bootstrap snippet col-lg-offset-0" id="container">
     <div class="row">
-        <div class="col-sm-10"><h1>Pas de behandeling aan</h1></div>
+        <div class="col-sm-10"><h1>Details van de behandeling</h1></div>
     </div>
     <div class="row">
         <div class="col-sm-9">
@@ -19,57 +19,61 @@
                     <form class="form" action="##" method="post" id="registrationForm">
                         <div class="form-group">
                             <div class="col-xs-12">
-                                <label for="name"><h4>Patiënt</h4></label>
-                                <type="text" class="form-control" asp-for="PatientDetailViewModel.Name" value="@Model.PatientDetailViewModel.Name" title="//Naam van de patiënt//">
+                                <label for="PatientName"><h4>Patiënt</h4></label>
+                                @*<label type="text" title="Naam van de patiënt">@Model.PatientDetailViewModel.Name</label>*@
+                                <input type="text" class="form-control" value="@Model.PatientDetailViewModel.Name" readonly="readonly">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-xs-6">
-                                <label for="Age"><h4>Behandelingsnaam</h4></label>
-                                <input type="text" class="form-control" asp-for="Name" value="@Model.Name" title="Naam van de behandeling.">
+                                <label for="TreatmentName"><h4>Behandelingsnaam</h4></label>
+                                @*<label type="text" title="Naam van de behandeling">@Model.Name</label>*@
+                                <input type="text" class="form-control" value="@Model.Name" readonly="readonly">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-xs-6">
-                                <label for="nameTreatment"><h4>Behandelingstype</h4></label>
-                                <select type="text" class="form-control" asp-for="Type" value="@Model.Type" title="Type van de behandeling.">
-                                    <option>Behandeling 1</option>
-                                    <option>Behandeling 2</option>
-                                    <option>Behandeling 3</option>
-                                </select>
+                                <label for="TreatmentType"><h4>Behandelingstype</h4></label>
+                                @*<label type="text" title="Type van de behandeling">@Model.Type</label>*@
+                                <input type="text" class="form-control" value="@Model.Type" readonly="readonly">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-xs-3">
                                 <label for="Begindate"><h4>Begindatum</h4></label>
-                                <input type="date" class="form-control" asp-for="BeginDate" value="@Model.BeginDate.ToString("yyyy-MM-dd")" title="Begindatum behandeling">
+                                @*<label type="text" title="Begindatum behandeling">@Model.BeginDate.ToString("yyyy-MM-dd")</label>*@
+                                <input type="text" class="form-control" value="@Model.BeginDate.ToString("yyyy-MM-dd")" readonly="readonly">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-xs-3">
                                 <label for="BeginTime"><h4>Tijd</h4></label>
-                                <input type="time" class="form-control" asp-for="BeginTime" value="@Model.BeginDate.ToShortTimeString()" title="Begintijd behandeling">
+                                @*<label type="text" title="Begintijd behandeling">@Model.BeginDate.ToShortTimeString()</label>*@
+                                <input type="text" class="form-control" value="@Model.BeginDate.ToShortTimeString()" readonly="readonly">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-xs-3">
                                 <label for="Enddate"><h4>Einddatum</h4></label>
-                                <input type="date" class="form-control" asp-for="EndDate" placeholder="@Model.EndDate.ToString("yyyy-MM-dd")" title="Einddatum behandeling">
+                                @*<label type="text" title="Einddatum behandeling">@Model.EndDate.ToString("yyyy-MM-dd")</label>*@
+                                <input type="text" class="form-control" value="@Model.EndDate.ToString("yyyy-MM-dd")" readonly="readonly">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-xs-3">
                                 <label for="EndTime"><h4>Tijd</h4></label>
-                                <input type="time" class="form-control" asp-for="EndTime" value="@Model.EndDate.ToShortTimeString()" title="Eindtijd behandeling">
+                                @*<label type="text" title="Eindtijd behandeling">@Model.EndDate.ToShortTimeString()</label>*@
+                                <input type="text" class="form-control" value="@Model.EndDate.ToShortTimeString()" readonly="readonly">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-xs-12">
                                 <label for="Comments"><h4>Bericht</h4></label>
-                                <input type="text" class="form-control" name="comment" id="comment" placeholder="Bericht" title="Bericht.">
+                                @*<label type="text" title="Opmerking behandeling">@Model.Comment</label>*@
+                                <input type="text" class="form-control" value="@Model.Comment" readonly="readonly">
                                 <br />
                                 <br />
-                                <button type="submit" class="btn btn-primary" asp-action="Index" formmethod="post">Pas Aan</button>
+                                <button class="btn btn-primary" asp-action="Index" formmethod="post">Ga terug</button>
                             </div>
                         </div>
                     </form>
