Comments can be seen by patient

--- a/Webapp/Webapp/Views/Patient/Detail.cshtml
+++ b/Webapp/Webapp/Views/Patient/Detail.cshtml
@@ -86,7 +86,7 @@
                         <div class="form-group">
                             <div class="col-xs-12">
                                 <label for="Description"><h4>Omschrijving</h4></label>
-                                <input type="text" class="form-control" name="description" id="description" placeholder="Omschrijving" title="Omschrijving." value="@Model.TreatmentDetailViewModels[0].Comments[0].Description">
+                                <input type="text" class="form-control" name="description" id="description" placeholder="Omschrijving" title="Omschrijving." value="@Model.TreatmentDetailViewModels[0].Description.Description">
                             </div>
                         </div>
                         <div class="form-group">
